kubernetes-flux/blade/dns/blocky/app/ciliumnetworkpolicy.yaml
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/cilium.io/ciliumnetworkpolicy_v2.json

apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: blocky
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: blocky
  ingress:
    - fromEntities:
        - world
      toPorts:
        - ports:
            - port: "53"
    - fromEntities:
        - cluster
      toPorts:
        - ports:
            - port: "53"
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
      toPorts:
        - ports:
            - port: "4000"
  egress:
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
    - toCIDRSet:
        - cidr: 1.0.0.1/32
      toPorts:
        - ports:
            - port: "53"
        - ports:
            - port: "853"
    - toCIDRSet:
        - cidr: 1.1.1.1/32
      toPorts:
        - ports:
            - port: "53"
        - ports:
            - port: "853"
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: cache
      toPorts:
        - ports:
            - port: "6379"
